Fix Alert overflow, slight design tweaks

--- a/src/ui/components/Alert/Alert.scss
+++ b/src/ui/components/Alert/Alert.scss
@@ -6,7 +6,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	// padding: 20px;
 	color: $font-white;
 	position: absolute;
 	margin-left: auto;
@@ -19,14 +18,15 @@
 	width: 450px;
 	height: 50px;
 	margin-top: 10px;
-	// animation: fadeIn 0.5s;
 	font-family: Quicksand-700;
 	animation: alertEnter 1s;
 }
 
 .message {
-	// margin-left: 20px;
-	opacity: 1;
+	width: 350px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	animation: messageEnter 1s;
 }
 
@@ -51,14 +51,11 @@
 }
 
 .closebtn {
-	// margin: auto;
-	position: absolute;
-	right: 10px;
+	margin-right: 15px;
 	padding: 5px 10px 5px 10px;
 	margin-right: 2px;
 	color: $font-white;
 	font-weight: bold;
-	// float: right;
 	line-height: 20px;
 	cursor: pointer;
 	transition: 0.3s;
@@ -68,7 +65,6 @@
 .type-icon {
 	color: $font-white;
 	font-weight: bold;
-	float: left;
 	transition: 0.3s;
 	user-select: none;
 }
@@ -79,5 +75,5 @@
 }
 
 .lottie {
-	margin: 5px 10px 0 0;
+	margin: 5px 10px 0 10px;
 }
