--- a/src/ui/components/AudioPlayer/NowPlaying/NowPlaying.scss
+++ b/src/ui/components/AudioPlayer/NowPlaying/NowPlaying.scss
@@ -14,7 +14,7 @@
 	width: 42px;
 	height: 42px;
 	border-radius: 7px;
-	box-shadow: 0 0 5px #000000;
+	box-shadow: 0 0 15px rgba($color: #000000, $alpha: 0.5);
 	z-index: 1;
 }
 
