--- a/src/ui/styles/_animations.scss
+++ b/src/ui/styles/_animations.scss
@@ -47,7 +47,7 @@
 	}
 
 	50% {
-		display: inline;
+		display: block;
 		opacity: 0;
 	}
 
